--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,30 @@
 @import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
 
 body {
-  background-color: lightcyan;
-  background-image: url("../assets/minefield.png");
+  background-image: url(../assets/minefield_bg_large.png);
   background-size: cover;
   background-position: center;
-  height: 100vh;
-  /* background-color: lightcyan; */
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   font-size: 1.5rem;
+  color: lightgrey;
   margin: 0;
   text-align: center;
+}
+
+body::after {
+  content: "";
+  position: fixed;
+  bottom: 0;
+  left: 1rem;
+  width: 30%;
+  height: 30%;
+  background-image: url(../assets/minefield_sign.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  opacity: 0.4;
+  pointer-events: none;
+  z-index: 10;
 }
 
 body * {
@@ -33,27 +48,15 @@ h1 {
 #reset {
   font-size: 1.2rem;
   height: fit-content;
+  background-color: gray;
+  cursor: pointer;
 }
 
-#game {
+#btn-section {
   display: flex;
   justify-content: center;
   gap: 2rem;
 }
-
-/* .btn-difficulty {
-  width: 5rem;
-  height: 5rem;
-  font-size: 1.5rem;
-  border-radius: 50%;
-  border: none;
-  cursor: pointer;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
-  transition: all 0.2s ease;
-} */
 
 .btn-difficulty {
   width: 6rem;
@@ -67,7 +70,7 @@ h1 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  transition: all 0.2s ease;
+  transition: all 0.3s ease;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -75,12 +78,12 @@ h1 {
   display: none;
   position: absolute;
   bottom: -2.5rem;
-  background: #f8f9fa;
+  background: lightgray;
   padding: 4px 8px;
   border-radius: 6px;
   font-size: 1rem;
   white-space: nowrap;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
   z-index: 1;
 }
 
@@ -89,6 +92,6 @@ h1 {
 }
 
 .btn-difficulty:hover {
-  background-color: lightgray;
+  background-color: gray;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
 }
