--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,9 @@ body * {
 
 h1 {
   font-family: "Press Start 2P", system-ui, sans-serif;
-  margin: 3rem 0rem;
-  height: 1rem;
+  display: flex;
+  margin: 3rem 0rem 0rem;
+  justify-content: center;
 }
 
 #command {
@@ -126,6 +127,15 @@ h1 {
 #minefield td[data-state="revealed"] {
   box-shadow: inset 2px 2px 6px rgba(0, 0, 0, 0.6);
   background-color: lightskyblue;
+}
+
+#minefield td[data-state="end-revealed"] {
+  background-color: gray;
+}
+
+#minefield td[data-state="end-error"] {
+  box-shadow: inset 2px 2px 6px rgba(0, 0, 0, 0.6);
+  background-color: lightcoral;
 }
 
 #minefield td[data-state="not-revealed"]:hover {
