--- a/css/style.css
+++ b/css/style.css
@@ -85,10 +85,10 @@ h4 {
   max-width: 8rem;
 }
 
-#flag {
+/* #flag {
   color: maroon;
   text-shadow: 0px 0px 6px whie;
-}
+} */
 
 #btn-section {
   display: flex;
@@ -151,6 +151,7 @@ h4 {
   height: 2rem;
   aspect-ratio: 1/1;
   background-color: lightblue;
+  background-image: linear-gradient(-20deg, transparent 60%, #ffffff80 100%);
   color: black;
   transition: all 0.3s ease;
   /* cant use display:flex in table */
