--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,8 @@ h1 {
 
 h2,
 h3,
-h4 {
+h4,
+h5 {
   margin: 0.5rem 0;
 }
 
@@ -70,6 +71,12 @@ h4 {
   font-size: 1.2rem;
   height: fit-content;
   background-color: steelblue;
+  background-image: linear-gradient(
+    -12deg,
+    #00000080 2%,
+    transparent 90%,
+    #ffffff38 100%
+  );
   cursor: pointer;
   justify-content: center;
   align-items: center;
@@ -92,6 +99,7 @@ h4 {
 
 #btn-section {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 2rem;
 }
@@ -162,7 +170,7 @@ h4 {
 #minefield td[data-marker="flagged"]:after {
   font-family: "Font Awesome 6 Free";
   content: "\f024"; /* fa-flag */
-  font-weight: 900; /* Solid style */
+  font-weight: 900;
   color: crimson;
   position: absolute;
   top: 0.2rem;
@@ -193,4 +201,53 @@ h4 {
   box-shadow: inset 2px 2px 6px rgba(0, 0, 0, 0.6);
   background-color: gray;
   cursor: pointer;
+}
+
+@media (max-width: 480px) {
+  body {
+    font-size: 1.2rem;
+  }
+
+  main {
+    padding: 1rem 1rem;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+    margin: 1rem 0;
+  }
+
+  h2 {
+    font-size: 1.3rem;
+  }
+
+  #command > div {
+    gap: 0rem 0.5rem;
+  }
+
+  #command button {
+    font-size: 1rem;
+    padding: 0.4rem 0.8rem;
+  }
+
+  #btn-section {
+    gap: 1rem;
+  }
+
+  .btn-difficulty {
+    width: 4.5rem;
+    font-size: 1rem;
+  }
+
+  #minefield-container {
+    max-width: 100%; /* to prevent cropping off the left side because display:flex + scrolling has weird behaviour */
+    padding: 0 1rem;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  #minefield td {
+    min-width: 1.4rem;
+    height: 1.4rem;
+  }
 }
